# ETL_Pipeline-Using-dbt-Snowflake-Apache_Airflow

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: connections.py  dbt_dag.py  first_dag.py  ingest_crm.py  ingest_erp.py
dags/dbt/pipe/: dbt_project.yml
dags/dbt/pipe/analyses/: adhock_queries.sql
dags/dbt/pipe/macros/tests/: future_dates_check.sql  negative_values_check.sql
dags/dbt/pipe/models/: sources.yml
dags/dbt/pipe/models/bronze/: brz_crm_cust_info.sql  brz_crm_prd_info.sql  brz_crm_sales_details.sql  brz_erp_cust_az12.sql  brz_erp_loc_a101.sql  brz_erp_px_cat_g1v2.sql
dags/dbt/pipe/models/gold/: dim_date.sql  dim_products.sql  fact_sales.sql
dags/dbt/pipe/models/gold/ephemeral/: ephemeral_customers.sql
dags/dbt/pipe/models/plapla/: first_model.sql
dags/dbt/pipe/models/silver/: schema.yml  slv_crm_cust_info.sql  slv_crm_prd_info.sql  slv_crm_sales_details.sql  slv_erp_cust_az12.sql  slv_erp_loc_a101.sql  slv_erp_px_cat_g1v2.sql
dags/dbt/pipe/snapshots/: dim_customers.yml
dags/dbt/pipe/tests/: assert_ord_dt_less_that_ship_due_dt.sql  assert_start_dt_less_than_end_date_of_prd.sql  sales_price_check.sql
dbt_profiles/: .user.yml  profiles.yml
